[project]
name = "example-reflex"
version = "0.1.0"
description = ""
authors = [
    {name = "Tim Child",email = "timjchild@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "reflex (>=0.6.8,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
