[project]
name = "example-reflex"
version = "0.1.0"
description = "Basic example of using Reflex."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dependency-injector~=4.45.0",
    "reflex~=0.7.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]
